[package]
name = "koji-sane-json-api"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.4.2"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
actix-threadpool = "0.3.3"